# MiniKVM

./: CMakeLists.txt  LICENSE  README.md
docs/CH9329 DOCS/: CH9329.cs  全键盘码表.doc  按键编码.txt  通信命令测试举例.txt  鼠标相对移动说明.txt
scripts/: capture.py
src/: main.cpp
src/controller/: DeviceCoordinator.cpp  DeviceCoordinator.h  HttpServerController.cpp  HttpServerController.h  InputController.cpp  InputController.h
src/model/: CH9329Protocol.cpp  CH9329Protocol.h  KeyboardModel.cpp  KeyboardModel.h  MouseModel.cpp  MouseModel.h  SerialPortManager.cpp  SerialPortManager.h  VideoCaptureModel.cpp  VideoCaptureModel.h
src/view/: HttpConfigDialog.cpp  HttpConfigDialog.h  MainWindow.cpp  MainWindow.h  VideoWidget.cpp  VideoWidget.h
